@@ -1,3 +1,9 @@
+2009-03-07 Xavier Glattard <xavier.glattard@online.fr>
+
+	* Source/x11/XGServerEvent.m:
+	Fix a bug (from rev.28036) and consolidate the computing of expose rectangle
+	of subwindows.
+
 2009-03-06 Xavier Glattard <xavier.glattard@online.fr>
 
 	* Source/x11/XGGLFormat.m:
